--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,9 @@ html {
 .purple {
   color: var(--imp-text-color) !important;
 }
-
+.green {
+  color: var(--imp-text-color) !important;
+}
 button:focus {
   box-shadow: none !important;
 }
